UI: add header with graph information

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -25,6 +25,18 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="twelve columns header" id="graph-info"></div>
+      </div>
+      <div class="row">
+        <div class="four columns">
+          ## Sidebar
+        </div>
+        <div class="eight columns">
+          Sigma.js Graph
+        </div>
+    </div>
     <div id="registry"></div>
     <div id="classes"></div>
     <script src="js/compiled/rexster_explorer.js"></script>
