UI: content area mock-up

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -26,14 +26,42 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
+      <div class="row header">
         <div class="twelve columns header" id="graph-info"></div>
       </div>
-      <div class="row">
-        <div class="four columns">
-          ## Sidebar
+      <div class="row content">
+        <div class="three columns search">
+          <div class="search" id="graph-search">
+            <fieldset>
+              <legend>Graph Search</legend>
+              <input style="width: 100%" type="text" placeholder="Gremlin query used to search the graph" />
+              <div style="text-align: right">
+                <button type="button">Search</button>
+              </div>
+            </fieldset>
+            <div class="search-results">
+              <ul>
+                <li>Lalal</li>
+                <li>aiioa</li>
+                <li>uiqoioq</li>
+                <li>wtwyue</li>
+                <li>Lalal</li>
+                <li>aiioa</li>
+                <li>uiqoioq</li>
+                <li>wtwyue</li>
+                <li>Lalal</li>
+                <li>aiioa</li>
+                <li>uiqoioq</li>
+                <li>wtwyue</li>
+                <li>Lalal</li>
+                <li>aiioa</li>
+                <li>uiqoioq</li>
+                <li>wtwyue</li>
+              </ul>
+            </div>
+          </div>
         </div>
-        <div class="eight columns">
+        <div class="nine columns" id="graph-render">
           Sigma.js Graph
         </div>
     </div>
