Disable query prefix

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -39,7 +39,7 @@
             <fieldset>
               <legend>Graph Search</legend>
               <div class="input-like search-input-container">
-                <input class="not-input search-prefix" type="text" value="g." />
+                <input class="not-input search-prefix" type="text" value="g." disabled />
                 <input class="not-input search-text" type="text" placeholder="Gremlin query used to search the graph" />
               </div>
               <div class="search-button-container">
