Initial graph querying

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -34,8 +34,8 @@
         <div class="twelve columns header" id="graph-info"></div>
       </div>
       <div class="row content">
-        <div class="three columns search">
-          <div class="search" id="graph-search">
+        <div class="three columns search" id="graph-search">
+          <div class="search">
             <fieldset>
               <legend>Graph Search</legend>
               <div class="input-like search-input-container">
