index.html: fix search area layout

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -36,7 +36,7 @@
       <div class="row content">
         <div class="three columns search" id="graph-search">
           <div class="search">
-            <fieldset>
+            <fieldset class="with-button">
               <legend>Graph Search</legend>
               <div class="input-like search-input-container">
                 <input class="not-input search-prefix" type="text" value="g." disabled />
