--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="nine columns" id="graph-render">
-          Sigma.js Graph
+          vis.js Graph
         </div>
     </div>
 
