index.html: search results layout has been rewritten

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -46,25 +46,71 @@
                 <button type="button">Search</button>
               </div>
             </fieldset>
-            <div class="search-results">
-              <ul>
-                <li>Lalal</li>
-                <li>aiioa</li>
-                <li>uiqoioq</li>
-                <li>wtwyue</li>
-                <li>Lalal</li>
-                <li>aiioa</li>
-                <li>uiqoioq</li>
-                <li>wtwyue</li>
-                <li>Lalal</li>
-                <li>aiioa</li>
-                <li>uiqoioq</li>
-                <li>wtwyue</li>
-                <li>Lalal</li>
-                <li>aiioa</li>
-                <li>uiqoioq</li>
-                <li>wtwyue</li>
-              </ul>
+            <div class="search-results with-button container with-no-padding">
+              <div class="row">
+                <div class="ten columns">Lalal</div>
+                <div class="two columns">Add</div>
+              </div>
+              <div class="row">
+                <div class="ten columns">aiioa</div>
+                <div class="two columns">Add</div>
+              </div>
+              <div class="row">
+                <div class="ten columns">uiqoioq</div>
+                <div class="two columns">Add</div>
+              </div>
+              <div class="row">
+                <div class="ten columns">wtwyue</div>
+                <div class="two columns">Add</div>
+              </div>
+              <div class="row">
+                <div class="ten columns">Lalal</div>
+                <div class="two columns">Add</div>
+              </div>
+              <div class="row">
+                <div class="ten columns">aiioa</div>
+                <div class="two columns">Add</div>
+              </div>
+              <div class="row">
+                <div class="ten columns">uiqoioq</div>
+                <div class="two columns">Add</div>
+              </div>
+              <div class="row">
+                <div class="ten columns">wtwyue</div>
+                <div class="two columns">Add</div>
+              </div>
+              <div class="row">
+                <div class="ten columns">Lalal</div>
+                <div class="two columns">Add</div>
+              </div>
+              <div class="row">
+                <div class="ten columns">aiioa</div>
+                <div class="two columns">Add</div>
+              </div>
+              <div class="row">
+                <div class="ten columns">uiqoioq</div>
+                <div class="two columns">Add</div>
+              </div>
+              <div class="row">
+                <div class="ten columns">wtwyue</div>
+                <div class="two columns">Add</div>
+              </div>
+              <div class="row">
+                <div class="ten columns">Lalal</div>
+                <div class="two columns">Add</div>
+              </div>
+              <div class="row">
+                <div class="ten columns">aiioa</div>
+                <div class="two columns">Add</div>
+              </div>
+              <div class="row">
+                <div class="ten columns">uiqoioq</div>
+                <div class="two columns">Add</div>
+              </div>
+              <div class="row">
+                <div class="ten columns">wtwyue</div>
+                <div class="two columns">Add</div>
+              </div>
             </div>
           </div>
         </div>
