--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -14,6 +14,9 @@
 
     <!-- FONT
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet"
+          type="text/css">
     <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600'
           rel='stylesheet'
           type='text/css'>
