Open side menu when there's no graph available

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/skeleton-extensions.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/patch-react-burger-menu.js"></script>
   </head>
   <body>
     <div id="app">
